Fixed scrapping fimweb site  issue. Added scores from nflix.pl.

--- a/netfweb/popup.html
+++ b/netfweb/popup.html
@@ -26,12 +26,13 @@
                 background: #ddd;
             }
         </style>
-        <script src="popup.js"></script>
         <script src="jquery.js"></script>
+        <script src="popup.js"></script>
     </head>
     <body>
-        <div id="logo"><img src='icon48.png'></div>
+        <div id="logo"><img id="logo" src='icon48.png'></div>
         <div id="nflix">Nflix.pl</div>
         <div id="filmweb">Filmweb.pl</div>
+        <div id="reload"><img id="reload" title='Reload scores' src='reload.png'></div>
     </body>
 </html>
