--- a/netfweb/popup.html
+++ b/netfweb/popup.html
@@ -17,7 +17,7 @@
                 text-align: center;
                 padding: 5px 10px;
                 font-family: sans-serif;
-                font-size: 1.2em;
+                font-size: 12pt;
                 width: 100px;
                 margin-top: 1px;
                 background: #cccccc;
