Films are now identified in HTML by Netflix ID (previously by film title). Fixed problems with reporting. Fixed problems with displaying ratings.

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -132,7 +132,7 @@
             div.nfw_score_jaw {
                 font-size: 14px;
                 padding: 2px 5px;
-                width: 250px;
+                width: 280px;
                 float: left;
 
                 margin: 7px 0 0 10px;
@@ -161,11 +161,21 @@
                 <div><a href='#changelog'>changelog</a></div>
                 <div><a href='#about'>about</a></div>
                 <div><a href='#troubleshooting'>troubleshooting</a></div>
+                <div><a href='#pl_help'>polski</a></div>
             </div>
          </div>
         <div class="logo_grad"></div>
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.2.2</h4>
+            <p> Quick fix of the reporting issue. 
+
+            <h4> 0.2.1</h4>
+            <p> Fixed mapping Netflix on Filmweb for dozen films. Minor bug fixes. </p>
+
+            <h4> 0.2.0</h4>
+            <p> Displaying ratings on www.netflix.com/title... </p>
+
             <h4> 0.1.8</h4>
             <p>Help page. </p>
 
@@ -215,7 +225,16 @@
         <div class="logo_grad"></div>
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
-            <h4> 0.1.8</h4>
+            <h4> 0.2.2</h4>
+            <p> Szybka poprawka problemów z raportowaniem.
+
+    <h4> 0.2.1</h4>
+            <p> Poprawione mapowanie pozycji Netflix do stron Filmweb dla kilkunastu pozycji. Poprawione drobne błędy z wyświetlaniem. </p>
+
+            <h4> 0.2.0</h4>
+            <p> Wyświetlanie ocen na stronach www.netflix.com/title... </p>
+
+             <h4> 0.1.8</h4>
             <p>Strona pomocy.</p>
 
             <h4> 0.1.7</h4>
