--- a/netfweb/popup.html
+++ b/netfweb/popup.html
@@ -34,5 +34,6 @@
         <div id="nflix">Nflix.pl</div>
         <div id="filmweb">Filmweb.pl</div>
         <div id="reload"><img id="reload" title='Reload scores' src='reload.png'></div>
+        <div id="help">help</div>
     </body>
 </html>
