Popup menu on Filmweb site allows to report its link with Netflix film/series. Links to filmweb search website in case of unrecognized title. Several bug fixes.

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -167,8 +167,14 @@
         <div class="logo_grad"></div>
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.2.4</h4>
+            <p> Fixed ratings on www.netflix.com/title... Links to filmweb search website in case of unrecognized title</p>
+
+             <h4> 0.2.3</h4>
+            <p> Popup menu on Filmweb site allows to report its link with Netflix film/series. Several bug fixes. </p>
+
             <h4> 0.2.2</h4>
-            <p> Quick fix of the reporting issue. 
+            <p> Quick fix of the reporting issue. </p>
 
             <h4> 0.2.1</h4>
             <p> Fixed mapping Netflix on Filmweb for dozen films. Minor bug fixes. </p>
@@ -225,8 +231,14 @@
         <div class="logo_grad"></div>
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.2.4</h4>
+            <p> Poprawione wyświetlanie ocen na stronach www.netflix.com/title... Link do wyszkiwarki Filmweb w przypadku nierozpoznanych tytułów</p>
+
+            <h4> 0.2.3</h4>
+            <p> Popup menu na stronie Filmweb pozwala na powiązanie jej z pozycją z katalogu Netflix. Kilka poprawek błędów. </p>
+
             <h4> 0.2.2</h4>
-            <p> Szybka poprawka problemów z raportowaniem.
+            <p> Szybka poprawka problemów z raportowaniem.</p>
 
     <h4> 0.2.1</h4>
             <p> Poprawione mapowanie pozycji Netflix do stron Filmweb dla kilkunastu pozycji. Poprawione drobne błędy z wyświetlaniem. </p>
