--- a/netfweb/popup.html
+++ b/netfweb/popup.html
@@ -25,6 +25,13 @@
             div:hover {
                 background: #ddd;
             }
+            #report{
+                font-size: 8pt;
+            }
+
+           #data{
+               display: none;
+           }
         </style>
         <script src="jquery.js"></script>
         <script src="popup.js"></script>
@@ -35,5 +42,6 @@
         <div id="filmweb">Filmweb.pl</div>
         <div id="reload"><img id="reload" title='Reload scores' src='reload.png'></div>
         <div id="help">help</div>
+        <div id="data"><div>
     </body>
 </html>
