--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -155,7 +155,7 @@
             <div class="logo_title">
                 <img class="netfweb_logo" src='icon48.png'>
                 <h2>Film scores for </h2>
-                <h1>Netflix</h1>
+                <h1>Netflix - metacritic</h1>
            </div>
             <div class='links'>
                 <div><a href='#changelog'>changelog</a></div>
