--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -167,6 +167,9 @@
         <div class="logo_grad"></div>
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.2.5</h4>
+            <p> Just few new links with filmweb</p>
+
             <h4> 0.2.4</h4>
             <p> Fixed ratings on www.netflix.com/title... Links to filmweb search website in case of unrecognized title</p>
 
@@ -231,6 +234,9 @@
         <div class="logo_grad"></div>
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.2.5</h4>
+            <p> Tylko kilka nowych linków do stron filmwebu</p>
+
             <h4> 0.2.4</h4>
             <p> Poprawione wyświetlanie ocen na stronach www.netflix.com/title... Link do wyszkiwarki Filmweb w przypadku nierozpoznanych tytułów</p>
 
