--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -155,7 +155,7 @@
             <div class="logo_title">
                 <img class="netfweb_logo" src='icon48.png'>
                 <h2>Film scores for </h2>
-                <h1>Netflix - metacritic</h1>
+                <h1>Netflix</h1>
            </div>
             <div class='links'>
                 <div><a href='#changelog'>changelog</a></div>
@@ -167,7 +167,10 @@
         <div class="logo_grad"></div>
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
-            <h4> 0.2.5</h4>
+            <h4> 0.2.6</h4>
+            <p> Beta support for <span style='color:red'>metacritic.com</span>! Currently only in details box. Low efficiency of matching ratings, when the netflix service is set to non-English version.</p>
+
+             <h4> 0.2.5</h4>
             <p> Just few new links with filmweb</p>
 
             <h4> 0.2.4</h4>
@@ -234,6 +237,9 @@
         <div class="logo_grad"></div>
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.2.6</h4>
+            <p> Wersja beta wsparcia dla ocen z serwisu  <span style='color:red'>metacritic.com</span>! Obecnie oceny są wyświetlane tylko w oknie szczegółów. Niska skuteczność dopasowania ocen w przypadku ustawionej wersji netfliksa na język inny niż angielski. </p>
+
             <h4> 0.2.5</h4>
             <p> Tylko kilka nowych linków do stron filmwebu</p>
 
