Hotfix due to changes on the netflix site.

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -167,7 +167,10 @@
         <div class="logo_grad"></div>
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
-            <h4> 0.2.6</h4>
+            <h4> 0.2.7</h4>
+            <p> Hotfix due to changes on netflix website.</p>
+
+             <h4> 0.2.6</h4>
             <p> Beta support for <span style='color:red'>metacritic.com</span>! Currently only in details box. Low efficiency of matching ratings, when the netflix service is set to non-English version.</p>
 
              <h4> 0.2.5</h4>
@@ -237,6 +240,10 @@
         <div class="logo_grad"></div>
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.2.7</h4>
+            <p> Poprawka błędu wyświetlania oceny na stronie głównej z uwagi na zmiany na stronach netfliksa.</p>
+
+ 
             <h4> 0.2.6</h4>
             <p> Wersja beta wsparcia dla ocen z serwisu  <span style='color:red'>metacritic.com</span>! Obecnie oceny są wyświetlane tylko w oknie szczegółów. Niska skuteczność dopasowania ocen w przypadku ustawionej wersji netfliksa na język inny niż angielski. </p>
 
