Users can correct and report invalid ratings and links

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -166,8 +166,22 @@
          </div>
         <div class="logo_grad"></div>
         <div class='desc'>
+            <h3>we need your help!</h3>
+            <p>
+            Check out this <a style='color:red' href='https://www.youtube.com/watch?v=73eLVFmL0lo&hl=en&cc_lang_pref=en&cc_load_policy=1'>video</a> to learn how you can contribute to delivering more relevant ratings.
+            </p>
+        </div>
+
+
+        <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
-            <h4> 0.2.7</h4>
+            <h4> 0.3.0</h4>
+            <p> From now on, you can correct wrong ratings and links (Filmweb and Metacritic) and share this information with other users (<a style='color:black' href='https://www.youtube.com/watch?v=73eLVFmL0lo&hl=en&cc_lang_pref=en&cc_load_policy=1'>more info</a>).</p>
+
+             <h4> 0.2.8</h4>
+            <p> Only new mappings for Filmweb and Metacritic</p>
+
+             <h4> 0.2.7</h4>
             <p> Hotfix due to changes on netflix website.</p>
 
              <h4> 0.2.6</h4>
@@ -239,7 +253,21 @@
          </div>
         <div class="logo_grad"></div>
         <div class='desc'>
+            <h3>potrzebujemy Twojej pomocy!</h3>
+            <p>
+            Obejrzyj <a style='color:red' href='https://www.youtube.com/watch?v=73eLVFmL0lo&hl=pl&cc_lang_pref=pl&cc_load_policy=1'>film</a>, w którym wyjaśniamy jak możesz pomóc w dostarczaniu bardziej trafnych ocen.
+            </p>
+        </div>
+
+
+        <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.3.0</h4>
+            <p> Od teraz możesz poprawiać błędne oceny i linki (Filmweb i Metacritic), a także dzielić się tymi informacjami z innymi użytkownikami (<a style='color:black' href='https://www.youtube.com/watch?v=73eLVFmL0lo&hl=pl&cc_lang_pref=pl&cc_load_policy=1'>więcej info</a>).</p>
+
+            <h4> 0.2.8</h4>
+            <p> Tylko nowe mapowania do pozycji w serwisach Filmweb i Metacritic</p>
+
             <h4> 0.2.7</h4>
             <p> Poprawka błędu wyświetlania oceny na stronie głównej z uwagi na zmiany na stronach netfliksa.</p>
 
