Shows top rated titles - initial commit

--- a/netfweb/popup.html
+++ b/netfweb/popup.html
@@ -41,6 +41,7 @@
         <div id="nflix">Nflix.pl</div>
         <div id="filmweb">Filmweb.pl</div>
         <div id="reload"><img id="reload" title='Reload scores' src='reload.png'></div>
+        <div id="top">top</div>
         <div id="help">help</div>
         <div id="data"><div>
     </body>
