Added 'Top' page, showing titles with highest ratings

--- a/netfweb/top.html
+++ b/netfweb/top.html
@@ -13,18 +13,23 @@
 
             a {
                 text-decoration: none;
-                color: #aaa;
+                color: #555;
             }
             div.desc {
                 max-width: 1000px;
                 padding: 5px 10px;
                 font-size: 12pt;
                 margin: 10px auto;
+                min-height: 30px;
             }
 
             h3 {
-                text-align: center;
+                text-align: left;
                 font-size: 20pt;
+                margin: 5px;
+                border-top: 1px solid #777;
+                padding-top: 10px;
+                padding-bottom: 0;
             }
             div.logo_back {
                 width: 100%;
@@ -80,7 +85,7 @@
             div.links {
                 color: #aaa;
                 border-spacing:15px;
-                width: 400px;
+                width: 700px;
                 margin: 100px auto;
             }
 
@@ -91,10 +96,13 @@
                 border: 1px solid #aaa;
                 border-radius: 5px;
                 margin-right: 5px;
+                cursor: pointer;
+                
             }
 
             div.nfw_score{
                 font-size: 14px;
+                margin-top: 10px;
                 margin-right: 5px;
                 border-radius: 50%;
                 float: left;
@@ -112,41 +120,6 @@
                 text-align: center;
             }
 
-            div.nfw_score_bob {
-                float: left;
-                font-size: 12px;
-                margin: 8px 0 0 10px;
-                padding: 2px 5px;
-                pointer-events:none;
-
-                text-align: center;
-
-                background: rgba(100,100,100,0.7);
-                border: 2px solid #666;
-                color: #FF9;
-                font-weight: bold;
-                text-align: center;
-                border-radius: 5px;
-            }
-
-            div.nfw_score_jaw {
-                font-size: 14px;
-                padding: 2px 5px;
-                width: 280px;
-                float: left;
-
-                margin: 7px 0 0 10px;
-                background: rgba(100,100,100,0.7);
-                border: 2px solid #666;
-                color: #FF9;
-                font-weight: bold;
-                text-align: center;
-                border-radius: 5px;
-            }
-
-            div.pl {
-                margin-top: 100px;
-            }
 
         </style>
         <script type="text/javascript" src="jquery.js"></script>
@@ -159,10 +132,11 @@
                 <h1>Netflix</h1>
            </div>
             <div class='links'>
-                <div><a href='#changelog'>changelog</a></div>
-                <div><a href='#about'>about</a></div>
-                <div><a href='#troubleshooting'>troubleshooting</a></div>
-                <div><a href='#pl_help'>polski</a></div>
+                <div><a id='prev'>&lt;&lt; prev</a></div>
+                <div><a id='next'>next &gt; &gt;</a></div>
+                <div><a id='nflix'>nflix</a></div>
+                <div><a id='metacritic'>metacritic</a></div>
+                <div><a id='filmweb'>filmweb</a></div>
             </div>
          </div>
         <div class="logo_grad"></div>
