Metacritic can be enabled on the browser page

--- a/netfweb/top.html
+++ b/netfweb/top.html
@@ -132,11 +132,11 @@
                 <h1>Netflix</h1>
            </div>
             <div class='links'>
-                <div><a id='prev'>&lt;&lt; prev</a></div>
-                <div><a id='next'>next &gt; &gt;</a></div>
-                <div><a id='nflix'>nflix</a></div>
-                <div><a id='metacritic'>metacritic</a></div>
-                <div><a id='filmweb'>filmweb</a></div>
+                <div><a id='prev' href='#'>&lt;&lt; prev</a></div>
+                <div><a id='next' href='#'>next &gt; &gt;</a></div>
+                <div><a id='nflix' href='#'>nflix</a></div>
+                <div><a id='metacritic' href='#'>metacritic</a></div>
+                <div><a id='filmweb' href='#'>filmweb</a></div>
             </div>
          </div>
         <div class="logo_grad"></div>
