--- a/netfweb/popup.html
+++ b/netfweb/popup.html
@@ -40,6 +40,7 @@
         <div id="logo"><img id="logo" src='icon48.png'></div>
         <div id="nflix">Nflix.pl</div>
         <div id="filmweb">Filmweb.pl</div>
+        <div id="metacritic">Metacritic</div>
         <div id="reload"><img id="reload" title='Reload scores' src='reload.png'></div>
         <div id="top">top</div>
         <div id="help">help</div>
