Info about new release

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -175,6 +175,10 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+             <h4> 0.3.1</h4>
+            <p> (1) Metacritic ratings may be enabled on the main Netflix browser page. (2) Check the titles with the highest ratings using the extension button (top right corner of the browser).</p>
+
+
             <h4> 0.3.0</h4>
             <p> From now on, you can correct wrong ratings and links (Filmweb and Metacritic) and share this information with other users (<a style='color:black' href='https://www.youtube.com/watch?v=73eLVFmL0lo&hl=en&cc_lang_pref=en&cc_load_policy=1'>more info</a>).</p>
 
