--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -175,6 +175,10 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+             <h4> 0.4.0</h4>
+            <p> Ratings from IMDb are finally available!</p>
+
+
              <h4> 0.3.1</h4>
             <p> (1) Metacritic ratings may be enabled on the main Netflix browser page. (2) Check the titles with the highest ratings using the extension button (top right corner of the browser).</p>
 
@@ -266,6 +270,14 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+             <h4> 0.4.0</h4>
+            <p> Oceny z IMDb są w końcu dostępne!</p>
+
+
+             <h4> 0.3.1</h4>
+            <p> (1) Można już włączyć oceny z serwisu Metacritic na głównej stronie serwisu Netflix. (2) Wyświetlanie wszystkich filmów wg zindeksowanych ocen z serwisów (opcja TOP w menu rozszerzenie - prowy górny róg przeglądarki).</p>
+
+
             <h4> 0.3.0</h4>
             <p> Od teraz możesz poprawiać błędne oceny i linki (Filmweb i Metacritic), a także dzielić się tymi informacjami z innymi użytkownikami (<a style='color:black' href='https://www.youtube.com/watch?v=73eLVFmL0lo&hl=pl&cc_lang_pref=pl&cc_load_policy=1'>więcej info</a>).</p>
 
