--- a/netfweb/top.html
+++ b/netfweb/top.html
@@ -85,9 +85,18 @@
             div.links {
                 color: #aaa;
                 border-spacing:15px;
-                width: 700px;
+                width: 800px;
                 margin: 100px auto;
             }
+
+            #intro {
+                color: #444;
+                border-spacing:15px;
+                width: 800px;
+                margin: 50px auto;
+                font-size: 14pt;
+            }
+
 
             div.links div{
                 padding: 10px 20px;
@@ -137,9 +146,14 @@
                 <div><a id='nflix' href='#'>nflix</a></div>
                 <div><a id='metacritic' href='#'>metacritic</a></div>
                 <div><a id='filmweb' href='#'>filmweb</a></div>
+                <div><a id='imdb' href='#'>IMDb</a></div>
             </div>
          </div>
         <div class="logo_grad"></div>
+        <div id='intro'>
+            The following rating list is based ONLY on indexed titles. The more you use the extension, the more accurate the list is.
+        </div>
+
         <div id='list'>
         </div>
         <script type="text/javascript" src="top.js"></script>
