--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -175,6 +175,8 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.4.1</h4>
+            <p> Just few new links to imdb, metacritic and  filmweb</p>
              <h4> 0.4.0</h4>
             <p> Ratings from IMDb are finally available!</p>
 
@@ -270,6 +272,9 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.4.1</h4>
+            <p> Nowe powiązania z serwisami imdb, metacritic and  filmweb</p>
+ 
              <h4> 0.4.0</h4>
             <p> Oceny z IMDb są w końcu dostępne!</p>
 
