* Updating ratings when details about title are displayed * Reporting links for titles without rating * Changes due to filmweb website new html code

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -175,6 +175,18 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.4.11</h4>
+            <p> Another changes on Filmweb site.</p>
+            <h4> 0.4.10</h4>
+            <p> Fixed due to changes on Filmweb site. Better IMDd searching.</p>
+            <h4> 0.4.9</h4>
+            <p> Another new links to imdb, metacritic and  filmweb</p>
+            <h4> 0.4.8</h4>
+            <p> Reporting links to websites without ratings (i.e. new titles). Related titles button.</p>
+            <h4> 0.4.7 - 0.4.3</h4>
+            <p> Another new links to imdb, metacritic and  filmweb</p>
+            <h4> 0.4.2</h4>
+            <p> Updating ratings when details about title are displayed</p>
             <h4> 0.4.1</h4>
             <p> Just few new links to imdb, metacritic and  filmweb</p>
              <h4> 0.4.0</h4>
@@ -272,9 +284,21 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
-            <h4> 0.4.1</h4>
+            <h4> 0.4.11</h4>
+            <p> Kolejne zmianamy na stronach Filmweb.
+            <h4> 0.4.10</h4>
+            <p> Poprawka związana ze zmianami na stronach Filmweb. Lepsze wyszukiwanie tytułów na IMDb.</p>
+            <h4> 0.4.9</h4>
+            <p> Kolejne powiązania z serwisami imdb, metacritic and  filmweb</p>
+            <h4> 0.4.8</h4>
+            <p> Zgłaszanie linków do stron tytułów bez ocen (np. nowe pozycje). Przycisk 'Related titles'.</p>
+            <h4> 0.4.7 - 0.4.3</h4>
+            <p> Kolejne powiązania z serwisami imdb, metacritic and  filmweb</p>
+              <h4> 0.4.2</h4>
+            <p> Aktualizowanie ocen podczas wyświetlania szczegółowych informacji o tytule</p>
+           <h4> 0.4.1</h4>
             <p> Nowe powiązania z serwisami imdb, metacritic and  filmweb</p>
- 
+
              <h4> 0.4.0</h4>
             <p> Oceny z IMDb są w końcu dostępne!</p>
 
@@ -292,7 +316,7 @@
             <h4> 0.2.7</h4>
             <p> Poprawka błędu wyświetlania oceny na stronie głównej z uwagi na zmiany na stronach netfliksa.</p>
 
- 
+
             <h4> 0.2.6</h4>
             <p> Wersja beta wsparcia dla ocen z serwisu  <span style='color:red'>metacritic.com</span>! Obecnie oceny są wyświetlane tylko w oknie szczegółów. Niska skuteczność dopasowania ocen w przypadku ustawionej wersji netfliksa na język inny niż angielski. </p>
 
