TheMovieDB ratings support

--- a/netfweb/top.html
+++ b/netfweb/top.html
@@ -106,7 +106,7 @@
                 border-radius: 5px;
                 margin-right: 5px;
                 cursor: pointer;
-                
+
             }
 
             div.nfw_score{
@@ -143,7 +143,7 @@
             <div class='links'>
                 <div><a id='prev' href='#'>&lt;&lt; prev</a></div>
                 <div><a id='next' href='#'>next &gt; &gt;</a></div>
-                <div><a id='nflix' href='#'>nflix</a></div>
+                <div><a id='tmdb' href='#'>TheMovieDB</a></div>
                 <div><a id='metacritic' href='#'>metacritic</a></div>
                 <div><a id='filmweb' href='#'>filmweb</a></div>
                 <div><a id='imdb' href='#'>IMDb</a></div>
