--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -178,7 +178,7 @@
         <div class='desc'>
             <h3>about</h3><a name='about'></a>
             <p>Since Netflix replaced stars with a thumbs rating system, it has become <a href='https://www.forbes.com/sites/insertcoin/2017/06/26/netflixs-thumb-based-ratings-system-is-the-epitome-of-uselessness'>very painful</a> to find interesting stuff.
-              This Open Source extension enriches netflix browser with a rating based on the scores from IMDb.com, FilmWeb.pl, Netflix.pl and Metacritic.com sites.
+              This Open Source extension enriches netflix browser with a rating based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com and TheMovieDB.org sites.
               Source code and issue tracking system available on <a href='https://github.com/mrwrob/netfweb'>GitHub</a>.
             </p>
             <p><div class='nfw_score'>8,8</div><div class='nfw_score_jaw'><img src='star.png'> Filmweb 8,8 <img src='star.png'> Nflix 8,21 <img src='star.png'> Metacritic 71 <img src='star.png'> IMDb 7,31 <img src='star.png'> </div></p>
@@ -196,6 +196,10 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.6.0</h4>
+            <p> (Beta) TheMovieDB.org ratings available!  </p>
+            <h4> 0.5.2 - 0.5.1</h4>
+            <p> Another new links to imdb, metacritic and  filmweb</p>
             <h4> 0.5.0</h4>
             <p> Source code refactoring. Several bugfixes.</p>
             <h4> 0.4.11</h4>
@@ -293,7 +297,7 @@
 
         <div class='desc'>
            <h3>o wtyczce</h3><a name='about_pl'></a>
-           <p> Odkąd Netflix zmienił system oceniania filmów z gwiazdek na system rekomendacji "łapka w górę/dół", wyszukiwanie wartościowych pozycji stało się... utrudnione. To rozszerzenie przywraca ocenę poszczególnych filmów i seriali na strony Netfliksa. Prezentowany ranking pochodzi z największego polskiego serwisu poświeconego filmom - FilmWeb.pl, oraz z serwisów Nflix.pl, Metacritic i IMDb.</p>
+           <p> Odkąd Netflix zmienił system oceniania filmów z gwiazdek na system rekomendacji "łapka w górę/dół", wyszukiwanie wartościowych pozycji stało się... utrudnione. To rozszerzenie przywraca ocenę poszczególnych filmów i seriali na strony Netfliksa. Prezentowany ranking pochodzi z największego polskiego serwisu poświeconego filmom - FilmWeb.pl, oraz z serwisów Metacritic, IMDb oraz TheMovieDB.org.</p>
            <p>Rozszerzenie jest dostępne na zasadach Open Source, kod źródłowy i system zgłaszania uwag dostęþny jest w serwisie  <a href='https://github.com/mrwrob/netfweb'>GitHub</a>.
             <p><div class='nfw_score'>8,8</div><div class='nfw_score_bob'>Filmweb 8,8</div><div class='nfw_score_bob'>Nflix.pl 8,21</div><div class='nfw_score_jaw'><img src='star.png'> Filmweb 8,8 <img src='star.png'> Nflix.pl 8,21 <img src='star.png'> </div></p>
         </div>
@@ -310,6 +314,10 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.6.0</h4>
+            <p> (Beta) Oceny z serisu TheMovieDB.org</p>
+            <h4> 0.5.2 - 0.5.1</h4>
+            <p> Kolejne powiązania z serwisami imdb, metacritic and  filmweb</p>
             <h4> 0.5.0</h4>
             <p> Refaktoryzacja kodu źródłowego. Usunięte drobne błędy.</p>
             <h4> 0.4.11</h4>
