--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -196,6 +196,8 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.6.1</h4>
+            <p> Fixed matching titles from Filmweb and IMDb. New links to imdb, themoviedb, metacritic and filmweb.</p>
             <h4> 0.6.0</h4>
             <p> (Beta) TheMovieDB.org ratings available!  </p>
             <h4> 0.5.2 - 0.5.1</h4>
@@ -314,10 +316,12 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.6.1</h4>
+            <p> Poprawione dopasowanie tytułów ze stronami Filmweb i IMDb. Nowe powiązania z serwisami imdb, themoviedb, metacritic i filmweb.</p>
             <h4> 0.6.0</h4>
             <p> (Beta) Oceny z serisu TheMovieDB.org</p>
             <h4> 0.5.2 - 0.5.1</h4>
-            <p> Kolejne powiązania z serwisami imdb, metacritic and  filmweb</p>
+            <p> Kolejne powiązania z serwisami imdb, metacritic i filmweb</p>
             <h4> 0.5.0</h4>
             <p> Refaktoryzacja kodu źródłowego. Usunięte drobne błędy.</p>
             <h4> 0.4.11</h4>
