--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -196,6 +196,8 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.6.2</h4>
+            <p> Hotfix due to changes on netflix website.</p>
             <h4> 0.6.1</h4>
             <p> Fixed matching titles from Filmweb and IMDb. New links to imdb, themoviedb, metacritic and filmweb.</p>
             <h4> 0.6.0</h4>
@@ -316,6 +318,8 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.6.2</h4>
+            <p> Poprawka błędu wyświetlania oceny na stronie głównej z uwagi na zmiany na stronach netfliksa.</p>
             <h4> 0.6.1</h4>
             <p> Poprawione dopasowanie tytułów ze stronami Filmweb i IMDb. Nowe powiązania z serwisami imdb, themoviedb, metacritic i filmweb.</p>
             <h4> 0.6.0</h4>
