Bringin nflix.pl back. Fix due to changes on Netflix website

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -196,6 +196,12 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.6.9</h4>
+            <p> Fixed finding title in the main page.</p>
+            <h4> 0.6.8</h4>
+            <p> Prevent from interfering with pointer events. New links to imdb, themoviedb, metacritic and filmweb.</p>
+            <h4> 0.6.7</h4>
+            <p> Fixes for IMDb and Metacritic. New links to imdb, themoviedb, metacritic and filmweb.</p>
             <h4> 0.6.6</h4>
                 <p> Displaying scores in local format.</p>
             <h4> 0.6.5</h4>
@@ -324,6 +330,12 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.6.9</h4>
+            <p> Poprawiony błąd wyszukiwania tytułu na stronie głównej.</p>
+            <h4> 0.6.8</h4>
+            <p> Usunięcie konfliktu z pointer events. Nowe powiązania z serwisami imdb, themoviedb, metacritic i filmweb.</p>
+            <h4> 0.6.7</h4>
+            <p> Poprawki dla ocen z IMDb i Metacritic. Nowe powiązania z serwisami imdb, themoviedb, metacritic i filmweb.</p>
             <h4> 0.6.6</h4>
             <p> Wyświetlanie oceny zgodnie z formatem przeglądarki. </p>
             <h4> 0.6.5</h4>
