New version info

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -196,6 +196,8 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.6.10</h4>
+            <p> Fixed problem with new titles.</p>
             <h4> 0.6.9</h4>
             <p> Fixed finding title in the main page.</p>
             <h4> 0.6.8</h4>
@@ -330,6 +332,8 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.6.10</h4>
+            <p> Poprawiony błąd z nowymi tytułami.</p>
             <h4> 0.6.9</h4>
             <p> Poprawiony błąd wyszukiwania tytułu na stronie głównej.</p>
             <h4> 0.6.8</h4>
