--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -196,6 +196,9 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.7.0</h4>
+            <p> Bringing one of the most demanded feature. You can now turn of undesirable ratings:<br>
+            <img src="netflix.gif"></p>
             <h4> 0.6.10</h4>
             <p> Fixed problem with new titles.</p>
             <h4> 0.6.9</h4>
@@ -332,6 +335,9 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.7.0</h4>
+            <p> Wprowadzanie jednej z najbardziej pożądanych funkcji. Możesz teraz zmienić niepożądane oceny:<br>
+            <img src="netflix.gif"></p>
             <h4> 0.6.10</h4>
             <p> Poprawiony błąd z nowymi tytułami.</p>
             <h4> 0.6.9</h4>
