--- a/netfweb/popup.html
+++ b/netfweb/popup.html
@@ -52,7 +52,7 @@
         <div id="metacritic"><input id="metacritic_check" class="nfw_checkbox" type="checkbox" checked="checked"> Metacritic </div>
         <div id="imdb"><input id="imdb_check" class="nfw_checkbox" type="checkbox" checked="checked"> IMDb</div>
         <div id="tmdb"><input id="tmdb_check" class="nfw_checkbox" type="checkbox" checked="checked"> TheMovieDB</div>
-        <div id="nflix"><input id="nflix_check" class="nfw_checkbox" type="checkbox" checked="checked"> nflix.pl</div>
+        <div id="nflix"><input id="nflix_check" class="nfw_checkbox" type="checkbox" checked="checked"> Nflix.pl</div>
         <div id="reload" class='nfw_btns'><img id="reload" title='Reload scores' src='reload.png'></div>
         <div id="top" class='nfw_btns'>top</div>
         <div id="help" class='nfw_btns'>help</div>
