--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -178,7 +178,7 @@
         <div class='desc'>
             <h3>about</h3><a name='about'></a>
             <p>Since Netflix replaced stars with a thumbs rating system, it has become <a href='https://www.forbes.com/sites/insertcoin/2017/06/26/netflixs-thumb-based-ratings-system-is-the-epitome-of-uselessness'>very painful</a> to find interesting stuff.
-              This Open Source extension enriches netflix browser with a rating based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com and TheMovieDB.org sites.
+              This Open Source extension enriches netflix browser with a rating based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com, Nflix.pl and TheMovieDB.org sites.
               Source code and issue tracking system available on <a href='https://github.com/mrwrob/netfweb'>GitHub</a>.
             </p>
             <p><div class='nfw_score'>8,8</div><div class='nfw_score_jaw'><img src='star.png'> Filmweb 8,8 <img src='star.png'> Nflix 8,21 <img src='star.png'> Metacritic 71 <img src='star.png'> IMDb 7,31 <img src='star.png'> </div></p>
@@ -196,6 +196,10 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.7.2</h4>
+            <p> Fixed problem with IMDb ratings.</p>
+            <h4> 0.7.1</h4>
+            <p> Ratings from Nflix.pl are back.</p>
             <h4> 0.7.0</h4>
             <p> Bringing one of the most demanded feature. You can now turn of undesirable ratings:<br>
             <img src="netflix.gif"></p>
@@ -318,7 +322,7 @@
 
         <div class='desc'>
            <h3>o wtyczce</h3><a name='about_pl'></a>
-           <p> Odkąd Netflix zmienił system oceniania filmów z gwiazdek na system rekomendacji "łapka w górę/dół", wyszukiwanie wartościowych pozycji stało się... utrudnione. To rozszerzenie przywraca ocenę poszczególnych filmów i seriali na strony Netfliksa. Prezentowany ranking pochodzi z największego polskiego serwisu poświeconego filmom - FilmWeb.pl, oraz z serwisów Metacritic, IMDb oraz TheMovieDB.org.</p>
+           <p> Odkąd Netflix zmienił system oceniania filmów z gwiazdek na system rekomendacji "łapka w górę/dół", wyszukiwanie wartościowych pozycji stało się... utrudnione. To rozszerzenie przywraca ocenę poszczególnych filmów i seriali na strony Netfliksa. Prezentowany ranking pochodzi z największego polskiego serwisu poświeconego filmom - FilmWeb.pl, oraz z serwisów Metacritic, IMDb, Nflix.pl oraz TheMovieDB.org.</p>
            <p>Rozszerzenie jest dostępne na zasadach Open Source, kod źródłowy i system zgłaszania uwag dostęþny jest w serwisie  <a href='https://github.com/mrwrob/netfweb'>GitHub</a>.
             <p><div class='nfw_score'>8,8</div><div class='nfw_score_bob'>Filmweb 8,8</div><div class='nfw_score_bob'>Nflix.pl 8,21</div><div class='nfw_score_jaw'><img src='star.png'> Filmweb 8,8 <img src='star.png'> Nflix.pl 8,21 <img src='star.png'> </div></p>
         </div>
@@ -335,6 +339,10 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.7.2</h4>
+            <p> Poprawiony błąd z ocenami IMDb.</p>
+            <h4> 0.7.1</h4>
+            <p> Wróciły oceny z serwisu Nflix.pl</p>
             <h4> 0.7.0</h4>
             <p> Wprowadzanie jednej z najbardziej pożądanych funkcji. Możesz teraz zmienić niepożądane oceny:<br>
             <img src="netflix.gif"></p>
