Metacritic scores fix

--- a/netfweb/info.html
+++ b/netfweb/info.html
@@ -196,6 +196,10 @@
 
         <div class='desc'>
             <h3>changelog</h3><a name='changelog'></a>
+            <h4> 0.7.4</h4>
+            <p> Fixed problem with Metacritic ratings.</p>
+            <h4> 0.7.3</h4>
+            <p> New links to imdb, themoviedb, metacritic and filmweb.</p>
             <h4> 0.7.2</h4>
             <p> Fixed problem with IMDb ratings.</p>
             <h4> 0.7.1</h4>
@@ -339,6 +343,10 @@
 
         <div class='desc'>
             <h3>zmiany</h3><a name='changelog_pl'></a>
+            <h4> 0.7.4</h4>
+            <p> Poprawiony błąd z ocenami Metacritic.</p>
+            <h4> 0.7.3</h4>
+            <p> Nowe powiązania z serwisami imdb, themoviedb, metacritic i filmweb.</p>
             <h4> 0.7.2</h4>
             <p> Poprawiony błąd z ocenami IMDb.</p>
             <h4> 0.7.1</h4>
